# SahiGUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindLIBVLC.cmake
src/: main.cpp  orbittransformcontroller.cpp  orbittransformcontroller.h  videoplayer.cpp  videoplayer.h
ui/: main.ui
